tests/paczka2/big_fuzzy/93392474.err
Error in line 1: A737 A737 4,8
Error in line 5: A737 S285 69,1
Error in line 8: 5oHls S285 18,7
Error in line 6: A737 A737 22,2
Error in line 26: h1l S285 52,2
Error in line 30: h1l S564 69,7
Error in line 32: h1l A737 98,2
Error in line 43: iWPu206 S564 71,8
Error in line 36: h1l S564 54,5
Error in line 50: zcXf S564 49,7
Error in line 56: 5oHls A737 63,2
Error in line 35: XIX1ZFHA S285 96,8
Error in line 64: 5oHls A381 45,4
Error in line 65: 5oHls A737 25,4
Error in line 72: XIX1ZFHA A737 32,9
Error in line 44: PZGE57tEs2T A381 91,6
Error in line 79: XIX1ZFHA S285 4,6
Error in line 84: h1l S285 64,7
Error in line 81: PZGE57tEs2T A737 15,1
Error in line 97: ?A(3(
Error in line 109: 5oHls S564 78,2
Error in line 121: A737 A737 94,9
Error in line 122: iWPu206 S564 90,0
Error in line 135: PZGE57tEs2T S564 19,8
Error in line 133: zcXf S285 43,5
Error in line 138: A737 S285 62,1
Error in line 141: zcXf S564 188,90
Error in line 139: A737 S564 12,8
Error in line 127: 5oHls S564 64,8
Error in line 149: A737 A737 19,3
Error in line 155: 5oHls A381 29,9
Error in line 153: iWPu206 S564 99,1
Error in line 165: h1l A737 10,7
Error in line 173: iWPu206 S564 -5,6
Error in line 174: PZGE57tEs2T A737 31,0
Error in line 171: zcXf S564 264,7
Error in line 169: 5oHls A737 85,5
Error in line 167: iWPu206 S564 87,4
Error in line 190: zcXf S285 -2,6
Error in line 188: h1l S285 55,6
Error in line 205: XIX1ZFHA A381 64,5
Error in line 203: h1l A737 20,2
Error in line 213: h1l S285 -1,1
Error in line 207: A737 S564 14,0
Error in line 230: 5oHls A381 61,98
Error in line 232: 5oHls A381 182,9
Error in line 236: iWPu206 S564 37,2
Error in line 241: PZGE57tEs2T A737 2,8
